Update catalog page

--- a/data/catalog.html
+++ b/data/catalog.html
@@ -85,7 +85,7 @@
             <th style="font-size: 35px;">Data Catalog</th>
             </tr>
             </tbody>
-            <tr class="tbContext">
+<!--             <tr class="tbContext">
                 <td><a href="http://jiacheng.website/data/data0301-0307.html" style="color: yellow; font-size: 35px; "> 2020-03-01 to 2020-03-07</a></td>
             </tr>
             <tr class="tbContext">
@@ -96,7 +96,7 @@
             </tr>
             <tr class="tbContext">
                 <td><a href="http://jiacheng.website/data/data0322-0328.html" style="color: yellow; font-size: 35px; "> 2020-03-22 to 2020-03-28</a></td>
-            </tr>
+            </tr> -->
 
 
             <tr class="tbContext">
