--- a/water.html
+++ b/water.html
@@ -133,7 +133,7 @@
     <div class="container d-flex">
 
         <div class="logo mr-auto">
-            <h1 class="text-light"><a href="https://itongue.cn/index.html"><span>Olix</span></a></h1>
+            <h1 class="text-light"><a href="https://itongue.cn/index.html"><span>Oilix</span></a></h1>
         </div>
   
     </div>
@@ -145,8 +145,8 @@
         <div class="row">
             <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center aos-init aos-animate" data-aos="fade-up">
                 <div>
-                    <h1>Olix</h1>
-                    <h2 style="text-align:justify">Introducing Olix, the revolutionary water quality testing app designed to empower individuals and communities with real-time insights into water safety. With AquaCheck, you can instantly measure and analyze various water quality parameters such as pH, turbidity, heavy metals, and bacterial contamination using just your smartphone. Our app leverages advanced sensor technology and AI-driven analysis to provide accurate, easy-to-understand results. Whether you're checking the safety of drinking water, monitoring aquaculture, or conducting environmental research, Olix offers a convenient and reliable solution to ensure the health and well-being of both people and ecosystems.
+                    <h1>Oilix</h1>
+                    <h2 style="text-align:justify">Introducing Oilix, the revolutionary water quality testing app designed to empower individuals and communities with real-time insights into water safety. With AquaCheck, you can instantly measure and analyze various water quality parameters such as pH, turbidity, heavy metals, and bacterial contamination using just your smartphone. Our app leverages advanced sensor technology and AI-driven analysis to provide accurate, easy-to-understand results. Whether you're checking the safety of drinking water, monitoring aquaculture, or conducting environmental research, Oilix offers a convenient and reliable solution to ensure the health and well-being of both people and ecosystems.
 					</h2>
                 </div>
             </div>
@@ -632,7 +632,7 @@
 <!--    </div>-->
 
     <div class="container">
-        <div class="copyright">Copyright © Olix All rights reserved.</div>
+        <div class="copyright">Copyright © Oilix All rights reserved.</div>
     </div>
 </footer>
 
